@@ -102,10 +102,11 @@
 
 /* Constants for nOrigin indicating the position relative to which fseek
  * sets the file position.  Defined unconditionally since ISO and POSIX
- * say they are defined here.  */
-#define SEEK_SET 0
-#define SEEK_CUR 1
-#define SEEK_END 2
+ * say they are defined here.
+ */
+#define SEEK_SET  0
+#define SEEK_CUR  1
+#define SEEK_END  2
 
 #ifndef	RC_INVOKED
 
